2009-12-07 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/nact/nact-clipboard.c (nact_clipboard_dump):
	Allow dump when clipboard has not been yet used.

	* nautilus-actions/api/na-object-api.h:
	All arguments have parenthesis around them.

	Only load in the Nautilus plugin valid and enabled candidate items.

	* nautilus-actions/nact/nact-application.c
	(appli_initialize_application): Explicitely load items.

	* nautilus-actions/nact/nact-main-window.c (reload):
	Call na_pivot_load_items() function.

	* nautilus-actions/plugin/nautilus-actions.c (instance_init):
	Explicitely load items after having set filtering criteria.

	* nautilus-actions/private/na-object-item.c
	(na_object_item_set_items_list): Free previous GList structure.

	* nautilus-actions/runtime/na-io-provider.c
	(na_io_provider_read_items): Filter the returned hierarchy.

	* nautilus-actions/runtime/na-pivot.c:
	* nautilus-actions/runtime/na-pivot.h
	(na_pivot_check_status): Removed function.
	(na_pivot_reload_items): Renamed as na_pivot_load_items().
	(na_pivot_set_population, na_pivot_is_disable_loadable,
	na_pivot_is_invalid_loadable): New functions.

2009-12-03 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/private/na-object-profile.c (object_is_valid):
	Fix validity check of the profile.

	Add a maintainer menu option to dump the clipboard.

	* nautilus-actions/nact/nact-clipboard.c:
	* nautilus-actions/nact/nact-clipboard.h (nact_clipboard_dump):
	New function.

	* nautilus-actions/nact/nact-main-menubar.c:
	* nautilus-actions/nact/nautilus-actions-maintainer.actions:
	Define the a new 'Dump the clipboard' option.

2009-12-02 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/nact/nact-iaction-tab.c
	(on_tab_updatable_selection_changed):
	* nautilus-actions/nact/nact-iadvanced-tab.c
	(on_tab_updatable_selection_changed):
	* nautilus-actions/nact/nact-ibackground-tab.c
	(on_tab_updatable_selection_changed):
	* nautilus-actions/nact/nact-icommand-tab.c